<resources>
    <string name="app_name">NewScoreApp</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score">0</string>
    <string name="points5">+5 Points</string>
    <string name="points3">+3 Points</string>
    <string name="points2">+2 Points</string>
    <string name="rscore">Rugby Score</string>
    <string name="clear">Clear</string>
</resources>
